[metadata]
name = pond
version = 0.0.1
author = Fen Faure
author_email = fen@fen.sh
description = A small programming language targeting WebAssembly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fenmade/pond
project_urls =
    Bug Tracker = https://github.com/fenmade/pond/issues
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
	Topic :: Software Development :: Compilers
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pond = pond.__main__:main
